<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/drop_course"
        android:gravity="left"
        android:textSize="30dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/course_name"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/schedule"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/room"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/prof"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit_Button"
            android:text="@string/drop"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_Button"
            android:text="@string/cancel"
            android:layout_gravity="right"
            />
    </LinearLayout>
</LinearLayout>