<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mintCream"
    tools:context="com.expensetracker.enrollmentapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/mainlayout"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:hint="@string/name_hint"
            android:maxLines="1"
            android:background="@drawable/edit_textbg"
            android:paddingStart="10dp"
            android:inputType="number"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingEnd="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_password"
            android:hint="@string/pwd_hint"
            android:background="@drawable/edit_textbg"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            />
        <Button
            android:layout_width="match_parent"

            android:layout_height="40dp"
            android:text="@string/submit_button"
            android:textSize="15sp"
            android:id="@+id/submit_button"
            android:layout_gravity="center_horizontal"
            />


    </LinearLayout>
</LinearLayout>
